--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ United States (English)</a>
         <div class="banner-text container">
             <div class="row">
                 <div class=" l-banner-position l-banner-position-img col-12 col-sm-12 col-md-5">
-                    <img src="./images/flash_element1.png" class="img-16 mt-330" alt="flash image">
+                    <img src="../images/flash_element1.png" class="img-16 mt-330" alt="flash image">
                     <h1 class="mt-8">Wireless Done Right</h1>
                     <p class="change-font-16">Get 4 lines of unlimited data, talk and text for as low as $39.99/line/month.*</p>
                 </div>
@@ -195,13 +195,13 @@ United States (English)</a>
     <section id="paths">
         <div class="section-paths">
             <div class="container">
-                <div class="row">
+                <div class="row mb-40">
                     <div class="col-lg-3 col-md-6 col-sm-6 col-12 pathElement-center">
                         <i class="fas mt-40 fa-wifi fa-3x"></i>
                         <p>Choose from the top nationwide 4G LTE networks </p>
 
                     </div>
-                    <div class="col-lg-3 col-md-6 col-sm-6 col-12 pathElement-center">
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-12  pathElement-center">
                         <i class="fas mt-40 fa-download fa-3x" aria-hidden="true"></i>
                         <p>Unlimited data plans </p>
                     </div>
@@ -228,7 +228,7 @@ United States (English)</a>
 
                             <div class="carousel-caption">
                                 <h1 class="mb-4 pl-4 pr-4">People Love Flash Wireless</h1>
-                                <p>“I love Flash Wireless. I am truly enjoying the savings and benefits, and I believe it's a notable cause to<br> pass on savings to people you know and care about! Thank you Flash Wireless!”</p>
+                                <p>“I love Flash Wireless. I am truly enjoying the savings and benefits, and I believe it's a notable cause to pass on savings to people you know and care about! Thank you Flash Wireless!”</p>
                                 <h5 class="mt-4">Michelle C.</h5>
                             </div>
                         </div>
@@ -236,7 +236,7 @@ United States (English)</a>
 
                             <div class="carousel-caption">
                                 <h1 class="mb-4 pl-4 pr-4">People Love Flash Wireless</h1>
-                                <h4>“I love Flash Wireless. I am truly enjoying the savings and benefits, and I believe it's a notable cause to<br>pass on savings to people you know and care about! Thank you Flash Wireless!”</h4>
+                                <h4>“I love Flash Wireless. I am truly enjoying the savings and benefits, and I believe it's a notable cause to pass on savings to people you know and care about! Thank you Flash Wireless!”</h4>
                                 <h5 class="mt-4">Michelle C.</h5>
                             </div>
                         </div>
@@ -244,7 +244,7 @@ United States (English)</a>
 
                             <div class="carousel-caption">
                                 <h1 class="mb-4 pl-4 pr-4">People Love Flash Wireless</h1>
-                                <h4>“I love Flash Wireless. I am truly enjoying the savings and benefits, and I believe it's a notable cause to<br> pass on savings to people you know and care about! Thank you Flash Wireless!”</h4>
+                                <h4>“I love Flash Wireless. I am truly enjoying the savings and benefits, and I believe it's a notable cause to pass on savings to people you know and care about! Thank you Flash Wireless!”</h4>
                                 <h5 class="mt-4">Michelle C.</h5>
                             </div>
                         </div>
@@ -286,9 +286,9 @@ United States (English)</a>
                     <img class="mt-40 mx-auto d-block img-fluid" src="./images/child-fed.PNG" alt="">
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-12">
-                    <p class="text-center mt-40">With ACN's Project Feeding Kids program, when you sign up for Flash Wireless, one meal will be donated to a child in need. Plus, every time you pay your monthly bill, another meal* will be provided.
+                    <p class="text-center mt-40 text-left">With ACN's Project Feeding Kids program, when you sign up for Flash Wireless, one meal will be donated to a child in need. Plus, every time you pay your monthly bill, another meal* will be provided.
                     </p>
-                    <p class="font-weight-bold mb-0  major-blue-1 text-center">Every bill. Every month. Every time.</p>
+                    <p class="font-weight-bold mb-0  major-blue-1 text-center text-left">Every bill. Every month. Every time.</p>
                 </div>
             </div>
         </div>
@@ -318,12 +318,14 @@ United States (English)</a>
             </div>
         </div>
     </section>
+    <section id = "myText">
     <div class="row">
-        <div class="myTitle  col-12 col-md-12 col-lg-12 col-sm-12 mt-40">
-            <p class=" mb-40 font-size-14 text-center font-italic">*Plus taxes and fees. Unlimited plans allow for high-speed data access only up to 22GB per line, per billing cycle. After the 22GB limit is reached,<br> Flash Wireless may slow you down to as low as 128 Kbps for the remainder of your billing cycle.
+        <div class="myTitle  col-12 col-sm-6 col-md-12 col-lg-12 mt-40 ">
+            <p class=" mb-40 font-size-12 text-center font-italic text-left text-right pa-10">*Plus taxes and fees. Unlimited plans allow for high-speed data access only up to 22GB per line, per billing cycle. After the 22GB limit is reached, Flash Wireless may slow you down to as low as 128 Kbps for the remainder of your billing cycle.
             </p>
         </div>
     </div>
+    </section>
 
     <footer class="footer">
         <div class="container">
