--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ United States (English)</a>
         <div class="banner-text container">
             <div class="row">
                 <div class=" l-banner-position l-banner-position-img col-12 col-sm-12 col-md-5">
-                    <img src="../images/flash_element1.png" class="img-16 mt-330" alt="flash image">
+                    <img src="./images/flash_element1.png" class="img-16 mt-330" alt="flash image">
                     <h1 class="mt-8">Wireless Done Right</h1>
                     <p class="change-font-16">Get 4 lines of unlimited data, talk and text for as low as $39.99/line/month.*</p>
                 </div>
